--- a/styles/style.css
+++ b/styles/style.css
@@ -4,13 +4,16 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+header{
+    background-image: url(../Assets/Hero-bg.png);   
+}
 
 /* nav styles */
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 51px 150px;
+    margin: 0px 150px;
 }
 .nav-title{
     font-size: 34px;
@@ -33,3 +36,14 @@ nav ul li a{
     background-color: #4E47FF;
     border: none;
 }
+
+/* banner styles */
+.banner{
+    text-align: center;
+}
+.banner-content{
+    font-size: 65px;
+    font-weight: bold;
+    color: #252432;
+    margin: 0px 267px;
+
