--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ nav ul li a{
 /* main styles */
 main{
     max-width: 1140px;
-    margin: 0 auto;
+    margin: 0 auto;   
 }
 
 /* action styles */
@@ -109,13 +109,35 @@ main{
 /* get touch styles */
 .get-touch{
     display: flex;
-    gap: 115px;
+    max-width: 1140px;
+    height: 632px; 
+    gap: 115px; 
+    
+}
+.get-touch-title{
+    font-size: 97px;
+    font-weight: bold;
+    color: #000000; 
+    margin-top: 200px;   
+}
+.get-touch-column{
     width: 50%;
+    margin-top: 91px;
+    
 }
 main section input[type="text"], main section input[type="email"], main section textarea{
     border-radius: 10px;
-    padding: 20px 20px;
+    padding: 32px 20px;
     width: 100%;
-    display: block;
-
+    display: block; 
+    margin-bottom: 19px;
+    font-size: 20px; 
+ 
 }
+main section label{
+    font-size: 18px;
+    font-weight: 500;
+    color: #000000;
+}
+
+
