--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,9 @@
   font-style: normal;
 }
 header{
-    background-image: url(../Assets/Hero-bg.png);   
+    background-image: url(../Assets/Hero-bg.png); 
+    max-width: 1440px;
+    margin: 0 auto;  
 }
 
 /* nav styles */
@@ -35,12 +37,17 @@ nav ul li a{
     border-radius: 10px;
     background-color: #4E47FF;
     border: none;
+    cursor: pointer;    
+}
+.btn-primary:hover{
+    background-color: #9403FD;
 }
 
 
 /* banner styles */
 .banner{
     text-align: center;
+    
 }
 .banner-content{
     font-size: 65px;
@@ -112,6 +119,7 @@ main{
     max-width: 1140px;
     height: 632px; 
     gap: 115px; 
+    margin-bottom: 150px;
     
 }
 .get-touch-title{
@@ -125,7 +133,7 @@ main{
     margin-top: 91px;
     
 }
-main section input[type="text"], main section input[type="email"], main section textarea{
+main section input[type="text"], main section input[type="email"], main section textarea {
     border-radius: 10px;
     padding: 32px 20px;
     width: 100%;
@@ -136,8 +144,46 @@ main section input[type="text"], main section input[type="email"], main section 
 }
 main section label{
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
     color: #000000;
 }
 
+.btn-touch{
+    width: 100%;
+}
 
+/* footer styles */
+
+.footer-container{
+    padding: 103px 454px;
+    text-align: center;
+    max-width: 1440px;
+    margin: 0 auto;  
+}
+.footer-title{
+    font-size: 100px;
+    color: #4E47FF;
+    font-weight: 900;
+    margin-bottom: 8px;
+}
+.footer-sub-title{
+    color: #8987A1; 
+    margin-bottom: 20px;   
+}
+
+footer section ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer section ul li{
+    list-style: none;
+    margin-right: 48px;
+}
+
+footer section ul li a{
+    text-decoration: none;
+    color: #8987A1;
+    
+}
