--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,7 @@ main{
     font-weight: bold;
     text-align: center;
     margin-top: 136px;
+    margin-bottom: 50px;
 }
 .review-container{
     display: flex;
